crates/deadline-cli/tests/cli/snapshots/cli__queue_resources__queue_export_credentials_empty_credentials_outputs_nulls.snap
---
source: crates/deadline-cli/tests/cli/queue_resources.rs
info:
  program: deadline
  args:
    - queue
    - export-credentials
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61660"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61660"
    AWS_ENDPOINT_URL_S3: "http://localhost:61660"
    AWS_ENDPOINT_URL_STS: "http://localhost:61660"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmphQLpHK/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmphQLpHK
---
success: true
exit_code: 0
----- stdout -----
{
  "Version": 1,
  "AccessKeyId": null,
  "SecretAccessKey": null,
  "SessionToken": null,
  "Expiration": ""
}

----- stderr -----
